websockets refactoring
