# internal/delivery/http/handler.go
@@ -6,6 +6,7 @@ import (
 
 	"github.com/gin-gonic/gin"
 	v1 "github.com/iamsorryprincess/vpiska-backend-go/internal/delivery/http/v1"
+	"github.com/iamsorryprincess/vpiska-backend-go/internal/delivery/websocket"
 	"github.com/iamsorryprincess/vpiska-backend-go/internal/service"
 	"github.com/iamsorryprincess/vpiska-backend-go/pkg/auth"
 	"github.com/iamsorryprincess/vpiska-backend-go/pkg/logger"
@@ -26,5 +27,7 @@ func NewHandler(services *service.Services, logger logger.Logger, tokenManager a
 	apiRouter := ginEngine.Group("/api")
 	handler := v1.NewHandler(logger, services, tokenManager)
 	handler.InitAPI(apiRouter)
+	websocketsHandler := websocket.NewHandler(logger, tokenManager, services.Events, services.Publisher)
+	ginEngine.GET("/api/v1/websockets/*any", gin.WrapH(websocketsHandler))
 	return ginEngine
 }
